test/samples/linear/invalid/silent-discard-func-ret.crust

linear struct lin_point {
    int x;
};

struct lin_point make() {
    struct lin_point b;

    b = {1};

    return b;

}

int main() {
    
    make();

    return 0;
} 
